@@ -454,6 +454,7 @@ All:
 - Added precision parameter to wxString::From[C]Double().
 - Added wxThread::Wait() and Delete() "wait mode" parameter (Catalin Raceanu).
 - Allow showing milliseconds in wxLog time stamps (tan).
+- Added support for processing instructions in wxXmlDocument (Nick Matthews).
 
 Unix:
 
